--- a/requirements_out_of_pytorch.txt
+++ b/requirements_out_of_pytorch.txt
@@ -1,70 +1,29 @@
-aiohttp==3.8.4
-aiosignal==1.3.1
-annotated-types==0.6.0
-appdirs==1.4.4
-async-timeout==4.0.2
-async-tio==1.3.2
-audioread==3.0.0
-brotlipy==0.7.0
-certifi==2022.12.7
 cn2an==0.5.19
-coloredlogs==15.0.1
 Cython==0.29.34
-distro==1.8.0
-filelock==3.9.0
-flatbuffers==23.3.3
-fonttools==4.25.0
-frozenlist==1.3.3
-fsspec==2023.4.0
-h11==0.14.0
-httpcore==0.17.0
-httpx==0.24.0
-huggingface-hub==0.14.1
-humanfriendly==10.0
+eng_to_ipa==0.0.2
+httpx==0.25.2
+indic_transliteration==2.3.54
+inflect==7.0.0
+jamo==0.4.1
 jieba==0.42.1
-joblib==1.2.0
-lazy_loader==0.2
+ko_pron==1.3
 librosa==0.10.0.post2
-llvmlite==0.40.0
-mkl-service==2.4.0
-mpmath==1.2.1
-msgpack==1.0.5
-multidict==6.0.4
-munkres==1.1.4
-networkx==3.0
-numba==0.57.0
+matplotlib==3.7.2
+num_thai==0.0.5
 numpy==1.24.0
 onnxruntime==1.14.1
-openai==1.3.5
-OpenAIAuth==0.3.6
-ply==3.11
-pooch==1.6.0
-proces==0.1.4
-protobuf==4.22.4
+openai==1.3.6
+opencc==1.1.7
 PyAudio==0.2.13
-pydantic==2.5.2
-pydantic_core==2.14.5
+pyopenjtalk==0.3.3
 pypinyin==0.48.0
-PyQt5==5.15.7
-pyreadline3==3.4.1
-pywin32==306
 PyYAML==6.0
-regex==2023.5.5
-requests==2.28.1
-revChatGPT==5.0.0
-scikit-learn==1.2.2
-scipy==1.10.1
-socksio==1.0.0
+PyYAML==6.0.1
+Requests==2.31.0
+scipy==1.11.4
 soundfile==0.12.1
-soxr==0.3.5
-sympy==1.11.1
-threadpoolctl==3.1.0
-tiktoken==0.3.3
-tokenizers==0.13.3
-tqdm==4.65.0
+# torch==2.0.0+cu118
 transformers==4.28.1
 typeguard==2.13.3
-urllib3==1.26.13
-webencodings==0.5.1
+Unidecode==1.3.7
 WMI==1.5.1
-yarl==1.9.2
