--- a/requirements_linux.txt
+++ b/requirements_linux.txt
@@ -20,6 +20,7 @@ PyYAML==6.0.1
 Requests==2.31.0
 scipy==1.10.1
 soundfile==0.12.1
-transformers==4.28.1
+transformers==4.35
 typeguard==2.13.3
 Unidecode==1.3.7
+ffmpeg-python
